bugfix: 即使批卷模式下，分数animate会导致整个DOM的flicker(闪烁),解决方案：使用 absolute positioning

--- a/public/htmlapp/assets/custom.css
+++ b/public/htmlapp/assets/custom.css
@@ -299,3 +299,9 @@ article.mathexerciseitem{
 .ng-pageslide{
   background: whitesmoke;
 }
+/*score block for math*/
+.score{
+  position: relative;
+  width: 68px;
+  display: inline-block;
+}
